feat: created home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<button class="btn btn-primary">Hello daisyUI</button>
+<app-header (onOpenDrawer)="click()"></app-header>
+<div class="drawer h-full">
+  <input id="my-drawer" type="checkbox" class="drawer-toggle" #drawer />
+  <div class="drawer-content">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="drawer-side">
+    <label for="my-drawer" class="drawer-overlay"></label>
+    <ul class="menu p-4 w-80 bg-base-100 text-base-content">
+      <!-- Sidebar content here -->
+      <li><a>Sidebar Item 1</a></li>
+      <li><a>Sidebar Item 2</a></li>
+    </ul>
+  </div>
+</div>
