feat: add more components

--- a/src/app/saving-stat/saving-stat.component.html
+++ b/src/app/saving-stat/saving-stat.component.html
@@ -1,9 +1,23 @@
-<div class="stats">
-  <div class="stat">
-    <div class="stat-title">Account balance</div>
-    <div class="stat-value">$89,400</div>
-    <div class="stat-actions">
-      <button class="btn btn-sm btn-success">Add funds</button>
+<div class="flex flex-row gap-x-2">
+  <div class="stats">
+    <div class="stat">
+      <div class="stat-title">Total savings</div>
+      <div class="stat-value">$400</div>
+      <!-- <div class="stat-actions">
+        <button class="btn btn-sm btn-success">Add funds</button>
+      </div> -->
+    </div>
+
+    <div class="stat">
+      <div class="stat-title">This month savings</div>
+      <div class="stat-value text-2xl">$69
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="inline-block w-8 h-8 stroke-success"
+          viewBox="0 0 24 24">
+          <path fill-rule="evenodd"
+            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+        </svg>
+      </div>
+      <div class="stat-desc">21% more than last month</div>
     </div>
   </div>
 </div>
