--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-header (onOpenDrawer)="click()"></app-header>
-<div class="drawer h-full">
+<div class="drawer h-screen">
   <input id="my-drawer" type="checkbox" class="drawer-toggle" #drawer />
   <div class="drawer-content">
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </div>
   <div class="drawer-side">
     <label for="my-drawer" class="drawer-overlay"></label>
