--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,44 @@
-<div class="flex flex-row p-2">
-  Hello,
+<div class="flex flex-col gap-2">
+  <div class="p-2">
+    <h1 class="text-3xl font-bold">Hello, {{ user.name }}</h1>
+  </div>
   <app-saving-stat></app-saving-stat>
+  <!-- <div class="bg-primary text-base-100 text-center w-full p-2">
+    CHECK YOUR DAILY GOALS
+  </div> -->
+  <div class="p-2 bg-neutral">
+    <h5 class="text-xl font-bold text-base-100">Achievements</h5>
+  </div>
+  <div class="flex flex-row gap-x-2 justify-center pt-2">
+    <div class="text-center" *ngFor="let i of [1, 2, 3]">
+      <div class="avatar">
+        <div class="w-24 mask mask-hexagon">
+          <img
+            src="https://static.vecteezy.com/system/resources/thumbnails/021/073/631/small/achievement-icon-design-free-vector.jpg" />
+        </div>
+      </div>
+      First $100
+    </div>
+  </div>
+  <div class="p-2 bg-neutral">
+    <h5 class="text-xl font-bold text-base-100">Your goals</h5>
+  </div>
+  <div class="px-2">
+    <div class="flex justify-between mb-1">
+      <span class="text-base font-medium">Fit saver</span>
+      <span class="text-sm font-medium">45%</span>
+    </div>
+    <div class="w-full bg-neutral rounded-full h-2.5">
+      <div class="bg-accent h-2.5 rounded-full" style="width: 45%"></div>
+    </div>
+  </div>
+  <div class="px-2">
+    <div class="flex justify-between mb-1">
+      <span class="text-base font-medium">$1k Club</span>
+      <span class="text-sm font-medium">83%</span>
+    </div>
+    <div class="w-full bg-neutral rounded-full h-2.5">
+      <div class="bg-accent h-2.5 rounded-full" style="width: 83%"></div>
+    </div>
+  </div>
 </div>
